--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>HTMLSeclton</title>
+</head>
 
+<body>
+    <h1>Brendan Bombard</h1>
+</body>
+</html>
