--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>HTMLSeclton</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>How to add meta tags to a web page</title>
+    <meta name="description" content="All about meta tags and how to add them to your website.">
+    <meta name="keywords" content="meta tags, meta description, meta keywords, SEO, search engine optimization">
 </head>
 
 <body>
