--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
 <meta charset="UTF-8">
 <title>HTMLSeclton</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>How to add meta tags to a web page</title>
-    <meta name="description" content="All about meta tags and how to add them to your website.">
-    <meta name="keywords" content="meta tags, meta description, meta keywords, SEO, search engine optimization">
-</head>
-
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
 <body>
-    <h1>Brendan Bombard</h1>
-</body>
-</html>
+
+    <img src="img_la.jpg" alt="LA" style="width:100%;"
+
+    <div class="">
+        <h1>This is a Heading</h1>
+        <p>This is a paragraph.</p>
+        <p>This is another paragraph.</p>
+       </div>
+       
+       </body>
+       </html>
