--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<nav></nav>
 <title>HTMLSeclton</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="">
@@ -9,16 +8,22 @@
 </style>
 <script src=""></script>
 <body>
+    <header>
+        <ul>
+            <li><a href="Home">Home</a></li>
+            <li><a href="Services">Services</a></li>
+            <li><a href="Work">Work</a></li>
+            <li><a href="Company">Company</a></li>
+            <li><a href="Contact">Contact</a></li>
+        </ul>
+     </nav>
+     </header>
+     
+<div class="">
+ <h1>This is a Heading</h1>
+ <p>This is a paragraph.</p>
+ <p>This is another paragraph.</p>
+</div>
 
-    <img src="img_la.jpg" alt="LA" style="width:100%;"
-
-    <div class="">
-        <h1>Home</h1>
-        <p> Services.</p>
-        <p>Work.</p>
-        <p>Company</p>
-        <p>Content</p>
-       </div>
-       
-       </body>
-       </html>
+</body>
+</html>
