--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src=""></script>
 <body>
     <header>
+    <nav>
         <ul>
             <li><a href="Home">Home</a></li>
             <li><a href="Services">Services</a></li>
