--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta charset="UTF-8">
 <title>HTMLSeclton</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<meta name="keywords" content="HTML, CSS">
+<meta name="description" content="Free Web tutorials for HTML and CSS">
 <link rel="stylesheet" href="css/styles.css">
 <style>
 </style>
