--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>HTMLSeclton</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <meta name="keywords" content="HTML, CSS">
-<meta name="description" content="Free Web tutorials for HTML and CSS">
+<meta name="description" content="Nocti rewview on HTML and CSS>
 <link rel="stylesheet" href="css/styles.css">
 <style>
 </style>
