--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>HTMLSeclton</title>
+<title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="keywords" content="HTML, CSS">
-<meta name="description" content="Nocti rewview on HTML and CSS>
 <link rel="stylesheet" href="css/styles.css">
 <style>
 </style>
@@ -13,16 +11,19 @@
     <header>
     <nav>
         <ul>
-            <li><a href="Home">Home</a></li>
-            <li><a href="Services">Services</a></li>
-            <li><a href="Work">Work</a></li>
-            <li><a href="Company">Company</a></li>
-            <li><a href="Contact">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Services">Services</a></li>
+        <li><a href="Work">Work</a></li>
+        <li><a href="Company">Company</a></li>
+        <li><a href="Contact">Contact Us</a></li>
         </ul>
-     </nav>
-     </header>
-     
-<div class="Nocti Review">
+        </nav>
+
+        <blockquote>NOCTI 2023 Review</blockquote>
+    </header>
+<img src="" alt="" style="">
+
+<div class="">
  <h1>This is a Heading</h1>
  <p>This is a paragraph.</p>
  <p>This is another paragraph.</p>
