--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, ratione! Voluptas illum, eos corporis commodi quidem non fugit? Porro autem labore quas tenetur sint temporibus maiores quos commodi fuga totam?</p>
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi neque deserunt illum aut molestiae voluptatem id numquam laboriosam veritatis. Incidunt deserunt ratione quam temporibus iure nemo quas accusamus excepturi illum.</p>
 </div>
+
+<button type="button">Click Me!</button>
  
 <footer>
     <div class="copyright">
