--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi neque deserunt illum aut molestiae voluptatem id numquam laboriosam veritatis. Incidunt deserunt ratione quam temporibus iure nemo quas accusamus excepturi illum.</p>
 </div>
 
-<button type="button">Click Me!</button>
+<button type="button">Learn!</button>
  
 <footer>
     <div class="copyright">
