--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 <button type="button">Learn!</button>
  
 <footer>
+    <div class="footer">
+        <p>&copy; Copyright 2023. All Rights Reserved.</p>
+      </div>
     <div class="copyright">
         <p>&copy; Copyright 2023. All Rights Reserved.</p>
     </div>
