--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  
 <footer>
     <div class="footer">
-        <p>Footer</p>
+        <p>&copy; Copyright 2023. All Rights Reserved.</p>
       </div>
     <div class="copyright">
         <p>&copy; Copyright 2023. All Rights Reserved.</p>
