--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 </div>
 
 <button type="button">Learn!</button>
+
+<div class="w3-container">
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus exercitationem expedita consectetur inventore praesentium dolorum vero dolores, ipsam modi quo, sed optio temporibus alias amet autem. Porro architecto assumenda neque!</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quam doloremque minima ea qui molestias quaerat, illum non modi autem dicta veritatis, soluta sed tempora explicabo eveniet fugiat ratione cum.</p>
+  </div>
+  
+  <article class="w3-container">
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis expedita doloribus dignissimos, at asperiores nostrum voluptas nam sunt nulla amet possimus rem libero, maiores vitae quibusdam beatae cumque aperiam error!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, molestiae impedit voluptatibus similique minima placeat quasi sunt maiores accusamus perferendis consequuntur culpa nesciunt consequatur, voluptas autem ullam aperiam sed tenetur?</p>
+  </article>
+  
+  <section class="w3-container">
+    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit aspernatur voluptatum, id doloremque unde enim nisi fugiat. Quisquam dolore rerum qui atque, dignissimos molestias sint? Soluta iusto asperiores est!</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, delectus saepe. Nulla aliquid rem maxime rerum laboriosam, reiciendis cupiditate corrupti alias itaque cum sit accusamus, incidunt sequi architecto excepturi ab!</p>
+  </section>
  
 <footer>
     <div class="footer">
@@ -37,6 +52,7 @@
       </div>
     <div class="copyright">
     </div>
+
 </footer>
 </body>
 </html>
