--- a/index.html
+++ b/index.html
@@ -36,22 +36,26 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quam doloremque minima ea qui molestias quaerat, illum non modi autem dicta veritatis, soluta sed tempora explicabo eveniet fugiat ratione cum.</p>
   </div>
   
+  <button type="button">Learn!</button>
+
   <article class="w3-container">
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis expedita doloribus dignissimos, at asperiores nostrum voluptas nam sunt nulla amet possimus rem libero, maiores vitae quibusdam beatae cumque aperiam error!</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, molestiae impedit voluptatibus similique minima placeat quasi sunt maiores accusamus perferendis consequuntur culpa nesciunt consequatur, voluptas autem ullam aperiam sed tenetur?</p>
   </article>
   
+  <button type="button">Learn!</button>
+
   <section class="w3-container">
     <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit aspernatur voluptatum, id doloremque unde enim nisi fugiat. Quisquam dolore rerum qui atque, dignissimos molestias sint? Soluta iusto asperiores est!</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, delectus saepe. Nulla aliquid rem maxime rerum laboriosam, reiciendis cupiditate corrupti alias itaque cum sit accusamus, incidunt sequi architecto excepturi ab!</p>
 </section>
 
+<button type="button">Learn!</button>
+
 <footer>
     <div class="footer">
         <p>&copy; Copyright 2023. All Rights Reserved.</p>
       </div>
-    <div class="copyright">
-    </div>
 </footer>
  
 </body>
