--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <footer>
     <div class="footer">
-        <p>&copy; Copyright 2023. All Rights Reserved.</p>
+        <p>&copy; Copyright 2023. Seaway Software Developers. All Rights Reserved.</p>
       </div>
 </footer>
  
