--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </nav>
 
         <blockquote>NOCTI 2023 Review</blockquote>
+        <article>Make Sure to Study!!!!!</article>
     </header>
 <img src="" alt="" style="">
 
