--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, molestiae impedit voluptatibus similique minima placeat quasi sunt maiores accusamus perferendis consequuntur culpa nesciunt consequatur, voluptas autem ullam aperiam sed tenetur?</p>
   </article>
   
-  <button type="button">Learn!</button>
-
-  <section class="w3-container">
-    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur reprehenderit aspernatur voluptatum, id doloremque unde enim nisi fugiat. Quisquam dolore rerum qui atque, dignissimos molestias sint? Soluta iusto asperiores est!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, delectus saepe. Nulla aliquid rem maxime rerum laboriosam, reiciendis cupiditate corrupti alias itaque cum sit accusamus, incidunt sequi architecto excepturi ab!</p>
+  <button type="button">Learn!</button
 </section>
 
 <button type="button">Learn!</button>
