--- a/index.html
+++ b/index.html
@@ -30,24 +30,26 @@
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi neque deserunt illum aut molestiae voluptatem id numquam laboriosam veritatis. Incidunt deserunt ratione quam temporibus iure nemo quas accusamus excepturi illum.</p>
 </div>
 
-<button type="button">Learn!</button>
+<button type="button">Learn!</button>&nbsp;
 
 <div class="w3-container">
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus exercitationem expedita consectetur inventore praesentium dolorum vero dolores, ipsam modi quo, sed optio temporibus alias amet autem. Porro architecto assumenda neque!</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis quam doloremque minima ea qui molestias quaerat, illum non modi autem dicta veritatis, soluta sed tempora explicabo eveniet fugiat ratione cum.</p>
   </div>
   
-  <button type="button">Learn!</button>
+  <button type="button">Learn!</button>&nbsp;
+			
+			
 
   <article class="w3-container">
     <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis expedita doloribus dignissimos, at asperiores nostrum voluptas nam sunt nulla amet possimus rem libero, maiores vitae quibusdam beatae cumque aperiam error!</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea, molestiae impedit voluptatibus similique minima placeat quasi sunt maiores accusamus perferendis consequuntur culpa nesciunt consequatur, voluptas autem ullam aperiam sed tenetur?</p>
   </article>
   
-  <button type="button">Learn!</button
+  <button type="button">Learn!</button>&nbsp;
+			
+			
 </section>
-
-<button type="button">Learn!</button>
 
 <footer>
     <div class="footer">
