--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="Services">Services</a></li>
         <li><a href="Work">Work</a></li>
         <li><a href="Company">Company</a></li>
-        <li><a href="Contact">Contact Us</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
         </ul>
         </nav>
 
