--- a/services.html
+++ b/services.html
@@ -15,6 +15,6 @@
         <li><a href="Services">Services</a></li>
         <li><a href="Work">Work</a></li>
         <li><a href="Company">Company</a></li>
-        <li><a href="Contact">Contact Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
         </nav>
