--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Services">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="Work">Work</a></li>
         <li><a href="Company">Company</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -53,7 +53,8 @@
 
 <footer>
     <div class="footer">
-        <p>&copy; Copyright 2023. Seaway Software Developers. All Rights Reserved.</p>
+        <p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
+      </p>
       </div>
 </footer>
  
