--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <nav>
         <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="Services">Services</a></li>
         <li><a href="Work">Work</a></li>
         <li><a href="Company">Company</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Contact">Contact Us</a></li>
         </ul>
         </nav>
 
@@ -53,8 +53,7 @@
 
 <footer>
     <div class="footer">
-        <p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
-      </p>
+        <p>&copy; Copyright 2023. Seaway Software Developers. All Rights Reserved.</p>
       </div>
 </footer>
  
