--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>HTMLSKELETON</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="css/styles.css">
 <style>
@@ -14,7 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="work.html">Work</a></li>
-        <li><a href="#">Company</a></li>
+        <li><a href="Company">Company</a></li>
         <li><a href="contact.html">Contact Us</a></li>
         </ul>
         </nav>
@@ -24,31 +24,30 @@
         <div class="row">
           <div class="column" style="background-color:#F4D35E;">
             <h2>Column 1</h2>
-            <img src="images/21909332704_03a90485c3_o.jpg" alt="Web Developer reading HTML" class="responsive">
+            <img src="images/21909332704_03a90485c3_o.jpg" width="400" height="500"  alt="Web Developer reading HTML" class="responsive">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sequi vero blanditiis laborum. Porro, aliquid qui consequuntur libero odit laudantium quam! Nostrum porro atque rem laudantium voluptatem, excepturi debitis aliquid? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius earum modi nam iste dolorem numquam quibusdam obcaecati, quis quos ipsa blanditiis odio laboriosam, repudiandae suscipit sed pariatur voluptates rem amet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ea nobis quae tempora quisquam explicabo, assumenda voluptatum adipisci non quod veritatis omnis illum quas quo repellendus, repellat quidem, corporis animi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quisquam, tenetur quas impedit alias itaque laudantium dicta inventore, eius fugit culpa aut sequi aspernatur magni dolorem error vero? Accusamus, laborum!</p>
             <button type="button">Learn More</button>
           </div>
           <div class="column" style="background-color:#0D3B66;">
             <h2>Column 2</h2>
-            <img src="images/2246383366_c874e3c1dc_o.jpg" alt=" Web Devloper showing his code" class="responsive">
+            <img src="images/2246383366_c874e3c1dc_o.jpg" width="400" height="500" alt="Web Devloper showing his code" class="responsive">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sequi vero blanditiis laborum. Porro, aliquid qui consequuntur libero odit laudantium quam! Nostrum porro atque rem laudantium voluptatem, excepturi debitis aliquid? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius earum modi nam iste dolorem numquam quibusdam obcaecati, quis quos ipsa blanditiis odio laboriosam, repudiandae suscipit sed pariatur voluptates rem amet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ea nobis quae tempora quisquam explicabo, assumenda voluptatum adipisci non quod veritatis omnis illum quas quo repellendus, repellat quidem, corporis animi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quisquam, tenetur quas impedit alias itaque laudantium dicta inventore, eius fugit culpa aut sequi aspernatur magni dolorem error vero? Accusamus, laborum!</p>
             <button type="button">Learn More</button>
           </div>
           <div class="column" style="background-color:#FAF0CA;">
             <h2>Column 3</h2>
-            <img src="images/5848333881_aecfbbacd0_o.jpg" alt="Code!!!" class="responsive">
+            <img src="images/5848333881_aecfbbacd0_o.jpg" width="400" height="500" alt="Code!!!" class="responsive">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sequi vero blanditiis laborum. Porro, aliquid qui consequuntur libero odit laudantium quam! Nostrum porro atque rem laudantium voluptatem, excepturi debitis aliquid? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius earum modi nam iste dolorem numquam quibusdam obcaecati, quis quos ipsa blanditiis odio laboriosam, repudiandae suscipit sed pariatur voluptates rem amet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis ea nobis quae tempora quisquam explicabo, assumenda voluptatum adipisci non quod veritatis omnis illum quas quo repellendus, repellat quidem, corporis animi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quisquam, tenetur quas impedit alias itaque laudantium dicta inventore, eius fugit culpa aut sequi aspernatur magni dolorem error vero? Accusamus, laborum!</p>
             <button type="button">Learn More</button>
           </div>
         </div>
     </header>
 </div>
-
-</body>
 <footer>
-
-<p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
-
-
+    <div class="footer">
+      <p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
+      </p>
+      </div>
 </footer>
+</body>
 </html>
