--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
     <nav>
         <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Services">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="Work">Work</a></li>
         <li><a href="Company">Company</a></li>
-        <li><a href="Contact">Contact Us</a></li>
+        <li><a href="contact.html">Contact</a></li>
         </ul>
         </nav>
 
@@ -34,7 +34,7 @@
             </a>
         </h4>
         <h4>Vist us at: 7225 NY-56, Norwood, NY 136680</h4>
-        <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11337.568256353157!2d-74.9899444!3d44.7320175!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc5d49b5e03a9f%3A0xaf7b7b60e3215973!2sSeaway%20Area%20Tech%20Center!5e0!3m2!1sen!2sus!4v1681915762447!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"  allowfullscreen="" loading="lazy" class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11337.568256353157!2d-74.9899444!3d44.7320175!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc5d49b5e03a9f%3A0xaf7b7b60e3215973!2sSeaway%20Area%20Tech%20Center!5e0!3m2!1sen!2sus!4v1681915762447!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </iframe>
     </div>
     
@@ -97,7 +97,8 @@
 
      <footer>
         <div class="footer">
-            <p>&copy; Copyright 2023. Seaway Software Developers. All Rights Reserved.</p>
+        <p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
+        </p>
           </div>
     </footer>
 </body>    
