--- a/services.html
+++ b/services.html
@@ -9,15 +9,15 @@
 <script src=""></script>
 <body>
     <header>
-    <nav>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="work.html">Work</a></li>
-        <li><a href="Company">Company</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-        </nav>
+        <nav>
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="Work.html">Work</a></li>
+            <li><a href="Company.html">Company</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            </ul>
+            </nav>
 
         <h2>Photos</h2>
 
