--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <script src=""></script>
 <body>
     <header>
-    <nav>
+      <nav>
         <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="Work">Work</a></li>
-        <li><a href="Company">Company</a></li>
+        <li><a href="work.html">Work</a></li>
+        <li><a href="Company.html">Company</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul>
         </nav>
