--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="Work.html">Work</a></li>
+            <li><a href="work.html">Work</a></li>
             <li><a href="Company.html">Company</a></li>
             <li><a href="contact.html">Contact</a></li>
             </ul>
