--- a/work.html
+++ b/work.html
@@ -56,3 +56,13 @@
         <figcaption>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim accusantium dolorum inventore eos, maiores nam mollitia aut eveniet nemo tempora harum ea, dignissimos velit doloribus magni. Magnam mollitia a assumenda!</figcaption>
     </figure>
 </main>
+
+            
+<footer>
+    <div class="footer">
+      <p>&copy; 2023 Seaway Software Developers. All Rights Reserved</p>
+      </p>
+      </div>
+</footer>
+</body>
+</html> 
